log
Wed 04 Oct 2023 10:47:57 PM UTC: 
 sudoku.c | 10 ++++++++++
 1 file changed, 10 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:24: error: comparison between pointer and integer [-Werror]
   58 |       if(n->sudo[i][k] == NULL) {
      |                        ^~
cc1: all warnings being treated as errors
Compilation failed
024d9d8
Wed 04 Oct 2023 10:49:01 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:58:27: error: empty character constant
   58 |       if(n->sudo[i][k] == '') {
      |                           ^~
Compilation failed
65464b2
